web/book/tests/documentation/snapshots/documentation__book__reference__data__from__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from artists\n"
snapshot_kind: text
---
SELECT
  *
FROM
  artists
