web/book/tests/documentation/snapshots/documentation__book__reference__data__from__1.snap
---
source: web/book/tests/documentation/book.rs
expression: "from e = employees\nselect e.first_name\n"
snapshot_kind: text
---
SELECT
  first_name
FROM
  employees AS e
