web/book/tests/documentation/snapshots/documentation__book__reference__data__from__2.snap
---
source: web/book/tests/documentation/book.rs
expression: "from db.`artist tracks`\n"
---
SELECT
  *
FROM
  "artist tracks"

