web/book/tests/documentation/snapshots/documentation__book__reference__data__from__3.snap
---
source: web/book/tests/documentation/book.rs
expression: "default_db.group  # in place of `from group`\ntake 1\n"
snapshot_kind: text
---
SELECT
  *
FROM
  "group"
LIMIT
  1
